add new elements to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     </head>
     <body>
       <h1>Welcome!</h1>
-      <p>Everything is fine</p>
+      <p>Everything is <em>fine.</em></p>
+      <p>No really, <strong>it's true!</strong></p>
+      <p>Here are some other true things:</p>
+      <ol>
+        <li>Unicorns are real.</li>
+        <li>Unicorns are awesome.</li>
+        <li>I am a unicorn.</li>
+      </ol>
+      <p>This is how I know everything is fine</p>
+      <ul>
+        <li>I am alive.</li>
+        <li>Donut's exist.</li>
+        <li>I can eat donuts.</li>
+      </ul>
     </body>
 </html>
